--- a/closures/index.html
+++ b/closures/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
+    <script src="./setTimeout.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
